feat(core): harden mentoring workflows and admin tools